--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "radix-vue": "^1.9.5",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "vite-plugin-singlefile": "^2.0.2",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
